# cuda-pi-chudnovsky-bbp

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
demo/: demo.cu  run_demo.ps1
docs/: 00_overview.md  01_chudnovsky.md  02_binary_splitting.md  03_bbp.md  04_bignum.md  05_ntt_goldilocks.md  06_cuda_design.md  07_build_and_run.md  08_scaling_to_billions.md
docs/changelog/: 0001-initial-import.md  0002-fix-katex-math-rendering.md  0003-complete-katex-math-fix.md
include/: bbp.h  bbp_kernel.h  bignum.h  chudnovsky.h  goldilocks.h  ntt.h  pi_reference.h
scripts/: build.bat  build.ps1  gen_vs.ps1  new_changelog.ps1  vcenv.ps1
src/: bbp_cpu.cpp  bbp_cuda.cu  bignum.cpp  bignum_div.cpp  chudnovsky.cpp  main.cpp  ntt_cpu.cpp  ntt_cuda.cu
tests/: self_test.cu
vs/: PiDigits.sln  pi.vcxproj  pi_demo.vcxproj
